CORE-7662: added an endpoint to list all permissions for a resource
